@@ -2,6 +2,7 @@
 	- Fix libubound for edns optlist feature.
 	- Fix distinction between free and CRYPTO_free in dsa and ecdsa alloc.
 	- Fix #752: retry resource temporarily unavailable on control pipe.
+	- un-document localzone tags.
 
 31 May 2016: Wouter
 	- Fix windows service to be created run with limited rights, as a
